[package]
name = "borys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algo_lib = {git = "https://github.com/BorysMinaiev/rust-contests"}
image = "0.24.3"
gif = "0.11.4"

[profile.release]
debug = 1
